--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-
+<nav>
+  <ul>
+    <li routerLink="home">
+      Main
+    </li>
+    <li routerLink="cities">
+      Cities
+    </li>
+  </ul>
+</nav>
 <router-outlet></router-outlet>
