Adding Navbar and fixing carousel styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,2 @@
-<nav>
-  <ul>
-    <li routerLink="home">
-      Main
-    </li>
-    <li routerLink="cities">
-      Cities
-    </li>
-  </ul>
-</nav>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
