--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -1,19 +1,3 @@
-ngb-carousel .wrapper {
-  margin: auto;
-}
-
-ngb-carousel .wrapper>img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
-
-.carousel-inner {
-  margin: auto;
-}
-
-.carousel-item {
-  margin: auto;
+.carousel {
+  margin-top: 48px;
 }
