Rendering cities for each city

--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -1,1 +1,15 @@
 <p>cities works!</p>
+
+<div *ngFor="let city of cities">
+
+  <!-- Render card component for each city in list -->
+
+  <!-- img of city -->
+
+  <!-- city name prolly h1 -->
+
+  <div>
+    {{city.name}}
+  </div>
+
+</div>
