--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -9,7 +9,7 @@
 
       <img class="card-img" [src]="city.image_url" style="max-height: 100px; max-width: 100px">
 
-      <h5>{{city.name}}</h5>
+      <h5 style="margin: 10px">{{city.name}}</h5>
     </div>
 
   </div>
