--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -1,17 +1,4 @@
-<div class="city-container">
-  <h1>Cities:</h1>
-  <div *ngFor="let city of cities">
-    <!-- Render card component for each city in list -->
+<!-- cityList -->
+<app-city-list></app-city-list>
 
-    <!-- img of city -->
-    <!-- city name prolly h1 -->
-    <div class="card">
-
-      <img class="card-img" [src]="city.image_url" style="max-height: 100px; max-width: 100px">
-
-      <h5 style="margin: 10px">{{city.name}}</h5>
-    </div>
-
-  </div>
-</div>
-
+<!-- cityPosts -->
