Adding City-Posts

--- a/src/app/city-list/city-list.component.html
+++ b/src/app/city-list/city-list.component.html
@@ -1,4 +1,4 @@
-<nav class="city-container">
+<div class="city-container">
   <h1>Cities:</h1>
   <div *ngFor="let city of cities">
     <a routerLink="/cities/{{city.id}}">
@@ -11,4 +11,4 @@
     </a>
 
   </div>
-</nav>
+</div>
