--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -1,6 +1,8 @@
 <!-- cityList -->
-<app-city-list></app-city-list>
+<div class="flex-direction: row">
+  <app-city-list></app-city-list>
 
 <!-- cityPosts -->
 <!--<app-city-posts></app-city-posts>-->
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
