--- a/src/app/city-posts/city-posts.component.html
+++ b/src/app/city-posts/city-posts.component.html
@@ -1,8 +1,19 @@
-<div class="card">
-  <h1 style="max-width: 300px">{{city.name}}</h1>
-  <img src="{{city.image_url}}" style="max-height: 300px; max-width: 300px;">
-  <div *ngFor="let post of city.posts">
-    {{post.title}}:
-    {{post.textContent}}
+<div class="card city-posts-card" style="position: absolute; justify-self: end">
+  <div class="city-header">
+    <h1 style="max-width: 300px">{{city.name}}</h1>
+
+    <img src="{{city.image_url}}" style="max-height: 300px; max-width: 300px; margin-top: 15px">
+
+  </div>
+
+  <div *ngIf="city.posts">
+    <div *ngFor="let post of city.posts" class="card" style="max-height: 300px">
+      <div class="card-body">
+        <h2>{{post.title}}</h2>
+        {{post.textContent | slice:0:100 }}...
+      </div>
+    </div>
   </div>
 </div>
+
+
