--- a/src/app/city-posts/city-posts.component.html
+++ b/src/app/city-posts/city-posts.component.html
@@ -8,12 +8,24 @@
 
   <div *ngIf="city.posts">
     <div *ngFor="let post of city.posts" class="card" style="max-height: 300px">
+
       <div *ngIf="post.image_url">
         <img [src]="post.image_url" style="max-height: 150px; max-width: 150px">
       </div>
+
       <div class="card-body">
         <h2>{{post.title}}</h2>
-        {{post.textContent | slice:0:100 }}...
+
+        <div *ngIf="!toggleMore">
+          {{post.textContent | slice:0:100 }}...
+        </div>
+
+        <div *ngIf="toggleMore">
+          {{ post.textContent }}
+        </div>
+
+        <button (click)="toggleMore = !toggleMore">Toggle me!</button>
+
       </div>
     </div>
   </div>
