--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
 
-  <a class="navbar-brand" routerLink="home">
+  <a class="navbar-brand" routerLink="/">
     <img src="../../assets/images/sailboat-icon.png" style="max-width: 30px; max-height: 30px; margin-top: -5px">
     Wayfarer
   </a>
@@ -16,7 +16,7 @@
         <a class="nav-link dropdown-toggle" id="id01" ngbDropdownToggle>Stuff</a>
 
         <div class="dropdown-menu" aria-labelledby="id01" ngbDropdownMenu>
-          <a class="dropdown-item" href="home">Home</a>
+          <a class="dropdown-item" href="/">Home</a>
           <a class="dropdown-item" href="cities">Cities</a>
         </div>
 
