Adding PageNotFound component and fixing nav

--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -1,8 +1,8 @@
-<!-- cityList -->
+<!-- cities consists of two components, city-list and city-posts -->
 <div class="flex-direction: row">
+  <!-- Shows a list of the cities in storage -->
   <app-city-list></app-city-list>
 
-<!-- cityPosts -->
-<!--<app-city-posts></app-city-posts>-->
+  <!-- Shows city-posts component for selected city -->
   <router-outlet></router-outlet>
 </div>
