--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
 
         <div class="dropdown-menu" aria-labelledby="id01" ngbDropdownMenu>
           <a class="dropdown-item" href="/">Home</a>
-          <a class="dropdown-item" href="cities">Cities</a>
+          <a class="dropdown-item" href="cities/0">Cities</a>
         </div>
 
       </li>
