Adding topics under carousel

--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -18,3 +18,19 @@
 
 </ngb-carousel>
 
+<h2 style="text-align: center">Wayfarer is...</h2>
+
+<div class="container-fluid">
+  <div>
+    <h2>Topic</h2>
+    <span>Lorem ipsum</span>
+  </div>
+  <div>
+    <h2>Topic</h2>
+    <span>Lorem ipsum</span>
+  </div>
+  <div>
+    <h2>Topic</h2>
+    <span>Lorem ipsum</span>
+  </div>
+</div>
