--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -1,3 +1,12 @@
 .carousel {
   margin-top: 48px;
 }
+
+.container-fluid {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.container {
+}
