Making city-posts more friendly by adding rounded borders to pics

--- a/src/app/city-posts/city-posts.component.html
+++ b/src/app/city-posts/city-posts.component.html
@@ -7,7 +7,7 @@
       <h4>{{city.country}}</h4>
     </div>
 
-    <img src="{{city.image_url}}" style="max-height: 300px; max-width: 300px; margin-top: 15px">
+    <img src="{{city.image_url}}" class="card-img" style="max-height: 300px; max-width: 300px; margin-top: 15px">
 
   </div>
 
