--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,5 +19,12 @@
       </li>
     </ul>
 
+    <form class="form-inline waves-light" mdbWavesEffect>
+      <div class="md-form mt-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      </div>
+      <button size="sm" class="search" type="submit">Search</button>
+    </form>
+
   </div>
 </nav>
